Example folder structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.1.0)
 project(netatmoapi++)
 
 add_subdirectory(src)
-add_subdirectory(example)
+add_subdirectory(examples)
 
 # add a target to generate API documentation with Doxygen
 find_package(Doxygen)
