--- a/examples/simple-client/CMakeLists.txt
+++ b/examples/simple-client/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.1.0)
 
+project(simple-client)
+
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../src)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../src)
 
 add_definitions(-std=c++14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
@@ -10,7 +12,7 @@ file(GLOB example_SRCS
     main.cpp
 )
 
-add_executable("${PROJECT_NAME}-example" ${example_SRCS})
+add_executable(${PROJECT_NAME} ${example_SRCS})
 
-target_link_libraries("${PROJECT_NAME}-example" netatmoapi++)
+target_link_libraries(${PROJECT_NAME} netatmoapi++)
 #install(TARGETS "${PROJECT_NAME}-example" DESTINATION "bin")
