--- a/tests/unitTests/utilsTest/CMakeLists.txt
+++ b/tests/unitTests/utilsTest/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.1.0)
 
-project(utilsTests)
+project(utilsTest)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../src)
 
-file(GLOB utilsTests_SRCS
+file(GLOB utilsTest_SRCS
     main.cpp
 )
 
-add_executable(${PROJECT_NAME} ${utilsTests_SRCS})
+add_executable(${PROJECT_NAME} ${utilsTest_SRCS})
 
 target_link_libraries(${PROJECT_NAME}
     netatmoapi++
