--- a/tests/integrationTests/CMakeLists.txt
+++ b/tests/integrationTests/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.1.0)
 
 add_subdirectory(curlTest)
 add_subdirectory(NAApiClientTest)
+add_subdirectory(NAWSApiClientTest)
