Add library version number

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,11 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(nlohmann_json)
 
+set(${PROJECT_NAME}_VERSION_MAJOR 1)
+set(${PROJECT_NAME}_VERSION_MINOR 0)
+set(${PROJECT_NAME}_VERSION_PATCH 0)
+set(${PROJECT_NAME}_VERSION_STRING ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH})
+
 file(GLOB netatmoapi_SRCS
     core/naapiclient.cpp
     core/nawsapiclient.cpp
@@ -40,7 +45,7 @@ file(GLOB netatmoapi_exceptions_HDRS
 )
 
 add_library(${PROJECT_NAME} SHARED ${netatmoapi_SRCS} ${netatmoapi_core_HDRS} ${netatmoapi_core_private_HDRS} ${netatmoapi_model_HDRS} ${netatmoapi_exceptions_HDRS})
-
+set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${${PROJECT_NAME}_VERSION_STRING} SOVERSION ${${PROJECT_NAME}_VERSION_MAJOR})
 target_link_libraries(${PROJECT_NAME} PRIVATE curl)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION "lib")
