Add CMake switch for examples and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,23 @@ add_definitions(-std=c++14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 
 # Offer the user the choice of overriding the installation directories
-set(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for libraries")
-set(INSTALL_BIN_DIR bin CACHE PATH "Installation directory for executables")
-set(INSTALL_INCLUDE_DIR include CACHE PATH "Installation directory for header files")
-set(INSTALL_DOC_DIR share/doc CACHE PATH "Installation directory for documentation files")
+set(INSTALL_LIB_DIR lib CACHE PATH "Installation directory for libraries" FORCE)
+set(INSTALL_BIN_DIR bin CACHE PATH "Installation directory for executables" FORCE)
+set(INSTALL_INCLUDE_DIR include CACHE PATH "Installation directory for header files" FORCE)
+set(INSTALL_DOC_DIR share/doc CACHE PATH "Installation directory for documentation files" FORCE)
+
+option(BUILD_EXAMPLES "Build examples." ON)
+option(BUILD_TESTS "Build tests." ON)
 
 add_subdirectory(src)
-add_subdirectory(examples)
-add_subdirectory(tests)
+
+if(BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
+
+if(BUILD_TESTS)
+    add_subdirectory(tests)
+endif()
 
 # add a target to generate API documentation with Doxygen
 find_package(Doxygen)
@@ -36,5 +45,4 @@ if(BUILD_DOCUMENTATION)
         VERBATIM)
 
     install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc/netatmo++-html DESTINATION ${INSTALL_DOC_DIR} OPTIONAL)
-    install(FILES ${doxygen_error} DESTINATION ${INSTALL_DOC_DIR} OPTIONAL)
 endif()
