--- a/examples/simple-ws-client/CMakeLists.txt
+++ b/examples/simple-ws-client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5.0)
 
-project(simple-client)
+project(simple-ws-client)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../src)
