Redesign of Core classes and parsing.

--- a/examples/simple-client/CMakeLists.txt
+++ b/examples/simple-client/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required(VERSION 3.5.0)
 
-project(simple-client)
+include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_BINARY_DIR}/src)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../src)
-
-file(GLOB example_SRCS
+set(example_SRCS
     main.cpp
 )
 
-add_executable(${PROJECT_NAME} ${example_SRCS})
+add_executable(simple-client ${example_SRCS})
 
-target_link_libraries(${PROJECT_NAME} netatmoapi++)
-install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_BIN_DIR})
+target_link_libraries(simple-client netatmoapi++)
+install(TARGETS simple-client DESTINATION ${INSTALL_BIN_DIR})
