--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,35 +1,36 @@
-cmake_minimum_required(VERSION 3.5.0)
-
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-# Find includes in corresponding build directories
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-find_package(nlohmann_json REQUIRED)
 
 set(${PROJECT_NAME}_VERSION_MAJOR 2)
 set(${PROJECT_NAME}_VERSION_STRING ${${PROJECT_NAME}_VERSION_MAJOR})
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 
-file(GLOB netatmoapi_SRCS
-    core/naapiclient.cpp
-    core/nawsapiclient.cpp
+set(netatmoapi_SRCS
+    core/naclient.cpp
+    core/nawsapi.cpp
+    core/parsing.cpp
     core/utils.cpp
     model/station.cpp
     model/module.cpp
     model/measures.cpp
     model/place.cpp
+    exceptions/curlexception.cpp
 )
 
-file(GLOB netatmoapi_core_HDRS
-    core/naapiclient.h
-    core/nawsapiclient.h
-    core/utils.h
+set(netatmoapi_core_HDRS
+    core/naclient.h
+    core/nawsapi.h
+    core/parsing.h
 )
 
-file(GLOB netatmoapi_core_private_HDRS
-    core/scopeexit.hpp
+set(netatmoapi_core_private_HDRS
+    core/private/parsing_p.h
+    core/private/scopeexit.h
+    core/private/utils.h
 )
 
-file(GLOB netatmoapi_model_HDRS
+set(netatmoapi_model_HDRS
     model/station.h
     model/module.h
     model/measures.h
@@ -37,13 +38,12 @@ file(GLOB netatmoapi_model_HDRS
     model/place.h
 )
 
-file(GLOB netatmoapi_exceptions_HDRS
-    exceptions/loginexception.hpp
-    exceptions/curlexception.hpp
-    exceptions/responseexception.hpp
+set(netatmoapi_exceptions_HDRS
+    exceptions/curlexception.h
 )
 
 add_library(${PROJECT_NAME} SHARED ${netatmoapi_SRCS} ${netatmoapi_core_HDRS} ${netatmoapi_core_private_HDRS} ${netatmoapi_model_HDRS} ${netatmoapi_exceptions_HDRS})
+generate_export_header(${PROJECT_NAME})
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${${PROJECT_NAME}_VERSION_STRING} SOVERSION ${${PROJECT_NAME}_VERSION_MAJOR})
 target_link_libraries(${PROJECT_NAME} PRIVATE curl)
 
@@ -51,3 +51,4 @@ install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_LIB_DIR})
 install(FILES ${netatmoapi_core_HDRS} DESTINATION ${INSTALL_INCLUDE_DIR}/core)
 install(FILES ${netatmoapi_model_HDRS} DESTINATION ${INSTALL_INCLUDE_DIR}/model)
 install(FILES ${netatmoapi_exceptions_HDRS} DESTINATION ${INSTALL_INCLUDE_DIR}/exceptions)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_export.h DESTINATION ${INSTALL_INCLUDE_DIR})
