--- a/tests/integrationTests/CMakeLists.txt
+++ b/tests/integrationTests/CMakeLists.txt
@@ -1,5 +1,3 @@
-cmake_minimum_required(VERSION 3.5.0)
-
 add_subdirectory(curlTest)
-add_subdirectory(NAApiClientTest)
-add_subdirectory(NAWSApiClientTest)
+add_subdirectory(NAClientTest)
+#add_subdirectory(NAWSApiClientTest)
