--- a/tests/unitTests/utilsTest/CMakeLists.txt
+++ b/tests/unitTests/utilsTest/CMakeLists.txt
@@ -1,18 +1,14 @@
-cmake_minimum_required(VERSION 3.5.0)
+include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(${PROJECT_BINARY_DIR}/src)
 
-project(utilsTest)
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../src)
-
-file(GLOB utilsTest_SRCS
+set(utilsTest_SRCS
     main.cpp
+    ${PROJECT_SOURCE_DIR}/src/core/utils.cpp
 )
 
-add_executable(${PROJECT_NAME} ${utilsTest_SRCS})
+add_executable(utilsTest ${utilsTest_SRCS})
 
-target_link_libraries(${PROJECT_NAME}
-    netatmoapi++
+target_link_libraries(utilsTest
     gtest
 )
 add_test(utilsTest utilsTest)
